[refactor] else if 문 지양 (#377)