@@ -72,10 +72,11 @@ public class PokeInfo {
 
             if (size == 0) {
                 return NEW_FRIEND_NO_MUTUAL;
-            } else if (size == 1) {
-                return String.format(NEW_FRIEND_ONE_MUTUAL, mutualFriendNames.get(0));
+            }
+            if (size == 1) {
+                return String.format(NEW_FRIEND_ONE_MUTUAL, mutualFriendNames.getFirst());
             } else {
-                return String.format(NEW_FRIEND_MANY_MUTUAL, mutualFriendNames.get(0), size - 1);
+                return String.format(NEW_FRIEND_MANY_MUTUAL, mutualFriendNames.getFirst(), size - 1);
             }
         }
 
@@ -95,15 +96,4 @@ public class PokeInfo {
         private final String message;
 
     }
-
-    @Getter
-    @Builder
-    @ToString
-    public static class PokeMessageDetail {
-
-        private final Long id;
-        private final String content;
-
-    }
-
 }
